public/dashboard/assets/css/dashboard.css
/* ... */
.student_main_info p {
  font-size: 1.5vw;
  font-weight: 600;
}

.student_main_info>div.columns>p span {
  font-weight: 400;
}

div.frame_bottom,
div.frame_top,
div.frame_left,
div.frame_right {
  color: rgba(0, 0, 0, 0);
}

.frame_bottom {
  position: absolute;
  bottom: 0;
  height: 6.5vh;
  z-index: 1300;
  width: 100%;
}

.frame_top {
  position: absolute;
  top: 0;
  height: 10.5vh;
  z-index: 1300;
  width: 100%;
}

.frame_left {
  position: absolute;
  left: 0;
  height: 100%;
  z-index: 1300;
  width: 9.5vw;
}

.frame_right {
  position: absolute;
  right: 0;
  height: 100%;
  z-index: 1300;
  width: 9.5vw;
}

.columns {
  column-count: 3;
  margin: 0 3vw;
  height: auto;
  min-height: 11vw;
}

p.email {
  margin-bottom: 12vh;
  z-index: 1000;
  position: relative;
  color: whitesmoke;
  font-size: 1.5vw;
}

p.street_address_2,
p.lesson_duration {
  margin-bottom: 4vw;
}

p.parent_name {
  margin-bottom: 1vw;
}

.comments_container {
  overflow: auto;
  height: 75px;
}

.color_strip {
  position: absolute;
  width: 100%;
  height: 10vw;
}

div.flex-viewport {
  overflow: hidden;
  position: relative;
  height: auto;
}

div.flex-viewport li {
  width: 503px;
  margin-right: 0px;
  float: left;
  display: block
}

div.flex-viewport>ul.slides {
  width: 1200%;
  transition-duration: 0.6s;
  transform: translate3d(-1006px, 0px, 0px);
}

.flex-viewport {
  height: 12vw;
}

.flexslider {
  height: 27vw;
  margin-bottom: 3vw;
  text-align: center;
}

ul.slides p {
  color: white;
  font-family: Trocchi;
  font-size: 1.5vw;
}

p.no_projects {
  margin-top: 6vw;
  font-size: 3vw;
}

p.project_number {
  margin-top: 1vw;
}

.project_container p.project_name {
  margin-top: 1vw;
  font-size: 3vw;
}

div.project_container {
  height: 26vw;
}

button.exit_student_curriculum,
button.edit_student_curriculum_modal,
button.add_student_curriculum_modal,
button.delete_student_curriculum_modal {
  margin-top: 0vw;
  color: white;
  height: 4vw;
  font-size: 1.5vw;
  width: 14vw;
  margin: 0 1vw;
}

div.teacher_project_container {
  overflow: auto;
  height: 6vw;
}

div.student_not_found.popIn {
  margin-top: 16vw;
  font-family: trocchi;
}

div.student_not_found>h2 {
  color: white;
}

.student_curriculum_container.student_version.slowPopIn {
  position: relative;
  z-index: 0;
  margin-top: 4vw;
}

.student_version button.exit_student_curriculum {
  background: rgb(178, 18, 18);
}

.curriculum_image {
  background: url('./../images/curriculum_new.jpg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  height: 45vw;
  position: absolute;
  top: 2vw;
  filter: brightness(92%) opacity(0.75);
  z-index: -1;
}

@media screen and (max-width: 840px) {
  div.card {
    width: 33vw;
    margin: 5vw auto;
    height: 39vw;
  }
  p.lesson_time {
    padding: 0;
    margin: 2vw;
    font-size: 2vw;
  }
  p.lesson_duration {
    margin: 0;
  }
  p.student_basic_info {
    font-size: 2vw;
  }
  button.add_student_project,
  button.student_info,
  button.delete_student {
    width: 19vw;
    font-size: 1.5vw;
    padding-top: 1vw;
    padding-bottom: 1.3vw;
    margin-bottom: 0vw;
    margin-top: 2.4vw;
    height: 5vw;
  }
  .card_color {
    position: relative;
    top: 0;
    width: 100%;
    height: 25vw;
  }
  .student_main_info {
    height: 34vw;
    width: 90vw;
  }
  h2.student_name {
    font-size: 3vw;
    margin-top: 2vw;
  }
  .student_main_info p {
    font-size: 1.7vw;
  }
  button.student_curriculum,
  button.student_exit,
  button.edit_info {
    width: 25vw;
    font-size: 2vw;
  }
  .columns {
    width: 80vw;
    text-align: center;
    margin: 0 auto;
    height: 13vw;
  }
}

@media screen and (max-width: 600px) {
  label {
    display: block;
    font-size: 3vw;
  }
  label#add_label,
  label#edit_label {
    display: inline-block;
  }
  div.card {
    width: 53vw;
    margin: 5vw auto;
    height: 50vw;
  }
  p.lesson_time {
    padding: 0;
    margin: 0;
  }
  p.student_basic_info {
    font-size: 2vw;
    margin: 2vw 0;
  }
  button.add_student_project,
  button.student_info {
    width: 18vw;
    font-size: 1.9vw;
    padding-top: 1vw;
    height: auto;
    margin: 3vw 2vw;
    margin-top: 5vw;
  }
  button.delete_student {
    font-size: 1.9vw;
    padding-top: 1vw;
  }
}
/* ... */

